# neopipe

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dev.env  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yaml  publish.yml
api/async_pipeline/: index.html
api/pipeline/: index.html
api/result/: index.html
api/task/: index.html
docs/: examples.md  index.md
docs/api/: async_pipeline.md  pipeline.md  result.md  task.md
docs/diagrams/: .$async-task-patterns.drawio.dtmp  async-task-patterns.drawio
docs/examples/: basic_use.md  basic_use_async_pipeline_module.md  basic_use_pipeline_module.md  basic_use_result_module.md  basic_use_task_module.md  lambda_function.md
examples/: index.html  lambda_function.py  starter.py
examples/basic_use/: index.html
examples/basic_use_async_pipeline_module/: index.html
examples/basic_use_pipeline_module/: index.html
examples/basic_use_result_module/: index.html
examples/basic_use_task_module/: index.html
examples/lambda_function/: index.html
notebooks/: prototype.ipynb  prototyping.ipynb
notebooks/examples/: OpenAi-Async-with-retry.ipynb  openai_summerizer.ipynb
search/: search_index.json
src/neopipe/: __about__.py  __init__.py  async_pipeline.py  neopipe.py  pipeline.py  result.py  task.py
tests/: test_async_pipeline.py  test_async_task.py  test_neopipe.py  test_parallel_pipeline.py  test_pipeline.py  test_pipeline_result.py  test_result.py  test_sync_pipeline.py  test_task.py
